--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,4 +10,4 @@ jobs:
       with:
         java-version: openjdk@1.14
     - name: test
-      run: sbt name && java --enable-preview -jar $HOME/.sbt/launchers/1.3.13/sbt-launch.jar scalafmtCheckAll scalafmtSbtCheck +test
+      run: sbt -v -J--enable-preview scalafmtCheckAll scalafmtSbtCheck +test
