--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - uses: olafurpg/setup-scala@v6
+    - uses: actions/setup-java@v1.4.2
       with:
-        java-version: openjdk@1.14
+        java-version: '15'
     - uses: coursier/cache-action@v4.1
+    - name: install sbt
+      run: curl -Ls https://git.io/sbt > ./sbt && chmod 0755 ./sbt
     - name: test
-      run: sbt -v -J--enable-preview scalafmtCheckAll scalafmtSbtCheck +test
+      run: ./sbt -v -J--enable-preview scalafmtCheckAll scalafmtSbtCheck +test
