--- a/.github/workflows/scala-steward.yml
+++ b/.github/workflows/scala-steward.yml
@@ -10,6 +10,7 @@ jobs:
     name: Launch Scala Steward
     steps:
       - name: Launch Scala Steward
+        if: ${{ github.repository_owner == 'xuwei-k' }}
         uses: scala-steward-org/scala-steward-action@v2.7.0
         with:
           github-token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
