--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,13 +7,17 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        java: [15, 16-ea]
     steps:
     - uses: actions/checkout@v2.3.4
     - uses: actions/setup-java@v1.4.3
       with:
-        java-version: '15'
+        java-version: ${{matrix.java}}
     - uses: coursier/cache-action@v5
     - name: install sbt
       run: curl -Ls https://git.io/sbt > ./sbt && chmod 0755 ./sbt
     - name: test
-      run: ./sbt -v -J--enable-preview scalafmtCheckAll scalafmtSbtCheck +test
+      run: ./sbt -v -J--enable-preview -Djdk_version=${{matrix.java}} scalafmtCheckAll scalafmtSbtCheck +test
