--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,4 @@ jobs:
     - name: install sbt
       run: curl -Ls https://git.io/sbt > ./sbt && chmod 0755 ./sbt
     - name: test
-      run: ./sbt -v -J--enable-preview -Djdk_version=${{matrix.java}} scalafmtCheckAll scalafmtSbtCheck +test
+      run: ./sbt -v -J--enable-preview scalafmtCheckAll scalafmtSbtCheck +test
