--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [15, 16-ea]
+        java: [15, 16]
     steps:
     - uses: actions/checkout@v2.3.4
     - uses: actions/setup-java@v1.4.3
