--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,12 +10,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [15, 16]
+        java: [15, 16, 17-ea]
     steps:
     - uses: actions/checkout@v2.3.4
     - uses: actions/setup-java@v2
       with:
         java-version: ${{matrix.java}}
+        check-latest: true
         distribution: adopt
     - uses: coursier/cache-action@v6
     - name: install sbt
