Update scalafmt-core to 3.0.0 (#46)

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,6 +1,6 @@
-version = "2.7.5"
+version = "3.0.0"
 maxColumn = 120
-align = none
+align.preset = none
 align.tokens = []
 align.openParenDefnSite = false
 align.openParenCallSite = false
@@ -8,7 +8,7 @@ rewrite.rules = [RedundantParens, ExpandImportSelectors, PreferCurlyFors]
 spaces.inImportCurlyBraces = false
 continuationIndent.callSite = 2
 continuationIndent.defnSite = 2
-docstrings = JavaDoc
+docstrings.style = keep
 includeCurlyBraceInSelectChains = false
 optIn.breakChainOnFirstMethodDot = false
 trailingCommas = preserve
