--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -12,3 +12,4 @@ docstrings.style = keep
 includeCurlyBraceInSelectChains = false
 optIn.breakChainOnFirstMethodDot = false
 trailingCommas = preserve
+runner.dialect = scala213
