--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,4 @@
-version = "3.0.8"
+version = "3.1.0"
 maxColumn = 120
 align.preset = none
 align.tokens = []
@@ -12,3 +12,4 @@ docstrings.style = keep
 includeCurlyBraceInSelectChains = false
 optIn.breakChainOnFirstMethodDot = false
 trailingCommas = preserve
+runner.dialect = scala213
