--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -13,3 +13,4 @@ includeCurlyBraceInSelectChains = false
 optIn.breakChainOnFirstMethodDot = false
 trailingCommas = preserve
 runner.dialect = scala213
+project.layout = StandardConvention
