--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,5 @@ jobs:
         check-latest: true
         distribution: adopt
     - uses: coursier/cache-action@v6
-    - name: install sbt
-      run: curl -Ls https://raw.githubusercontent.com/dwijnand/sbt-extras/master/sbt > ./sbt && chmod 0755 ./sbt
     - name: test
-      run: ./sbt -v "+scalafmtCheckAll" scalafmtSbtCheck +test
+      run: sbt -v "+scalafmtCheckAll" scalafmtSbtCheck +test
