--- a/.github/workflows/scala-steward.yml
+++ b/.github/workflows/scala-steward.yml
@@ -9,19 +9,18 @@ on:
 jobs:
   scala-steward:
     runs-on: ubuntu-latest
+    if: ${{ github.repository_owner == 'xuwei-k' }}
     steps:
     - uses: actions/setup-java@v3
       with:
         distribution: adopt
         java-version: 17
     - id: generate_token
-      if: ${{ !github.event.repository.fork }}
       uses: tibdex/github-app-token@v1
       with:
         app_id: 89536
         private_key: ${{ secrets.XUWEI_K_BOT_KEY }}
     - uses: scala-steward-org/scala-steward-action@v2
-      if: ${{ !github.event.repository.fork }}
       with:
         github-token: ${{ steps.generate_token.outputs.token }}
         author-email: "74788111+xuwei-k-bot[bot]@users.noreply.github.com"
