update scalafmt setting

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -12,4 +12,8 @@ docstrings.style = keep
 includeCurlyBraceInSelectChains = false
 optIn.breakChainOnFirstMethodDot = false
 trailingCommas = preserve
-runner.dialect = scala213
+runner.dialect = scala213source3
+rewrite.scala3.convertToNewSyntax = true
+runner.dialectOverride.allowSignificantIndentation = false
+runner.dialectOverride.allowAsForImportRename = false
+runner.dialectOverride.allowStarWildcardImport = false
