--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,5 +19,6 @@ jobs:
         check-latest: true
         distribution: adopt
     - uses: coursier/cache-action@v6
+    - uses: sbt/setup-sbt@v1
     - name: test
       run: sbt -v "+scalafmtCheckAll" scalafmtSbtCheck +test
