--- a/.github/workflows/scala-steward.yml
+++ b/.github/workflows/scala-steward.yml
@@ -16,10 +16,10 @@ jobs:
         distribution: adopt
         java-version: 17
     - id: generate_token
-      uses: tibdex/github-app-token@v2
+      uses: actions/create-github-app-token@67018539274d69449ef7c02e8e71183d1719ab42 # v2.1.4
       with:
-        app_id: 89536
-        private_key: ${{ secrets.XUWEI_K_BOT_KEY }}
+        app-id: 89536
+        private-key: ${{ secrets.XUWEI_K_BOT_KEY }}
     - uses: scala-steward-org/scala-steward-action@v2
       with:
         github-token: ${{ steps.generate_token.outputs.token }}
