--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [15, 16, 17]
+        java: [17, 25]
     steps:
     - uses: actions/checkout@v6
     - uses: actions/setup-java@v5
