--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,4 +21,4 @@ jobs:
     - uses: coursier/cache-action@v8
     - uses: sbt/setup-sbt@v1
     - name: test
-      run: sbt -v "+scalafmtCheckAll" scalafmtSbtCheck +test
+      run: sbt -v --server "+scalafmtCheckAll" scalafmtSbtCheck +test
